--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,12 +37,9 @@ jobs:
 
       # Build the app
       - name: Build the app
-        run: xcodebuild -workspace Login\ App.xcworkspace -scheme Login\ App -configuration Release clean archive -archivePath Login\ App/build/MyApp.xcarchive
+        run: xcodebuild -workspace Login\ App.xcworkspace -scheme Login\ App -configuration Release clean archive -archivePath Login\ App/build/MyApp.xcarchive -branch main
+
 
       # Export the IPA file
       - name: Export the IPA file
-        run: xcodebuild -exportArchive -archivePath Login\ App/build/MyApp.xcarchive -exportPath Login\ App/build/MyApp.ipa -exportOptionsPlist ExportOptions.plist
-
-      # Upload the IPA file
-      - name: Upload IPA - ${{ env.repository_name }}
-        run: transporter upload -f Login\ App/build/MyApp.ipa -u [App Store Connect Username] -p [App Store Connect Password]
+        run: xcodebuild -exportArchive -archivePath Login\ App/build/MyApp.xcarchive -exportPath Login\ App/build/MyApp.ipa -exportOptionsPlist ExportOptions.plist -branch main
