--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-        with:
-          ref: main
 
       # Set Current Date As Env Variable
       - name: Set current date as env variable
@@ -33,18 +31,22 @@ jobs:
       - name: Set repository name as env variable
         run: echo "repository_name=$(echo '${{ github.repository }}' | awk -F '/' '{print $2}')" >> $GITHUB_ENV
 
+      # Set Branch Name As Env Variable
+      - name: Set branch name as env variable
+        run: echo "branch_name=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV
+
       # Install Xcode CLI tools
       - name: Install Xcode CLI tools
         run: xcode-select --install || true
 
       # Build the app
       - name: Build the app
-        run: xcodebuild -workspace Login\ App.xcworkspace -scheme Login\ App -configuration Release clean archive -archivePath Login\ App/build/MyApp.xcarchive
+        run: xcodebuild -workspace ${{ env.main_project_module }}.xcworkspace -scheme ${{ env.main_project_module }} -configuration Release clean archive -archivePath ${{ env.main_project_module }}/build/MyApp.xcarchive -branch ${{ env.branch_name }}
 
       # Export the IPA file
       - name: Export the IPA file
-        run: xcodebuild -exportArchive -archivePath Login\ App/build/MyApp.xcarchive -exportPath Login\ App/build/MyApp.ipa -exportOptionsPlist ExportOptions.plist
+        run: xcodebuild -exportArchive -archivePath ${{ env.main_project_module }}/build/MyApp.xcarchive -exportPath ${{ env.main_project_module }}/build/MyApp.ipa -exportOptionsPlist ExportOptions.plist
 
       # Upload the IPA file
       - name: Upload IPA - ${{ env.repository_name }}
-        run: transporter upload -f Login\ App/build/MyApp.ipa -u [App Store Connect Username] -p [App Store Connect Password]
+        run: transporter upload -f ${{ env.main_project_module }}/build/MyApp.ipa -u [App Store Connect Username] -p [App Store Connect Password]
