--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,52 +1,34 @@
-name: Generated IPA (Upload)
-
-env:
-  # The name of the main module repository
-  main_project_module: Login App
-
-  # The name of the App Store
-  appstore_name: Frogobox ID
-
+name: iOS CI/CD Workflow
 on:
   push:
     branches:
-      - 'release/**'
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
+      - main
 jobs:
-  build:
-
-    runs-on: macos-latest
-
+  build-and-test:
+    runs-on: macOS-latest
+    env:
+      WORKSPACE: YourWorkspace.xcworkspace
+      SCHEME: YourScheme
+      SIMULATOR: "platform=iOS Simulator,name=iPhone 12 Pro,OS=15.3"
     steps:
-      - uses: actions/checkout@v2
-
-      # Set Current Date As Env Variable
-      - name: Set current date as env variable
-        run: echo "date_today=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
-
-      # Set Repository Name As Env Variable
-      - name: Set repository name as env variable
-        run: echo "repository_name=$(echo '${{ github.repository }}' | awk -F '/' '{print $2}')" >> $GITHUB_ENV
-
-      # Set Branch Name As Env Variable
-      - name: Set branch name as env variable
-        run: echo "branch_name=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV
-
-      # Install Xcode CLI tools
-      - name: Install Xcode CLI tools
-        run: xcode-select --install || true
-
-      # Build the app
-      - name: Build the app
-        run: xcodebuild -workspace ${{ env.main_project_module }}.xcworkspace -scheme ${{ env.main_project_module }} -configuration Release clean archive -archivePath ${{ env.main_project_module }}/build/MyApp.xcarchive -branch ${{ env.branch_name }}
-
-      # Export the IPA file
-      - name: Export the IPA file
-        run: xcodebuild -exportArchive -archivePath ${{ env.main_project_module }}/build/MyApp.xcarchive -exportPath ${{ env.main_project_module }}/build/MyApp.ipa -exportOptionsPlist ExportOptions.plist
-
-      # Upload the IPA file
-      - name: Upload IPA - ${{ env.repository_name }}
-        run: transporter upload -f ${{ env.main_project_module }}/build/MyApp.ipa -u [App Store Connect Username] -p [App Store Connect Password]
+      - name: Checkout Code
+        uses: actions/checkout@v2
+      - name: Install Dependencies
+        run: |
+          gem install bundler
+          bundle install
+          pod install
+      - name: Build
+        run: |
+          xcodebuild clean build \
+            -workspace $WORKSPACE \
+            -scheme $SCHEME \
+            -sdk iphonesimulator \
+            -destination "$SIMULATOR"
+      - name: Run Tests
+        run: |
+          xcodebuild test \
+            -workspace $WORKSPACE \
+            -scheme $SCHEME \
+            -sdk iphonesimulator \
+            -destination "$SIMULATOR"
