--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,33 +1,33 @@
-name: iOS CI/CD Workflow
+name: iOS Build Workflow
 on:
   push:
     branches:
       - main
 jobs:
-  build-and-test:
-    runs-on: macOS-latest
+  build:
+    runs-on: macos-latest
     env:
       WORKSPACE: YourWorkspace.xcworkspace
       SCHEME: YourScheme
       SIMULATOR: "platform=iOS Simulator,name=iPhone 12 Pro,OS=15.3"
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
+      - name: Install Xcode
+        uses: actions/setup-xcode@v2
+        with:
+          xcode-version: '13.2.1'
       - name: Install Dependencies
         run: |
-          gem install bundler
-          bundle install
-          pod install
+          if [ -e Podfile ]; then
+            gem install bundler
+            bundle install
+            pod install
+          else
+            echo "No Podfile found, skipping dependency installation."
+          fi
       - name: Build
         run: |
           xcodebuild clean build \
-            -workspace $WORKSPACE \
-            -scheme $SCHEME \
-            -sdk iphonesimulator \
-            -destination "$SIMULATOR"
-      - name: Run Tests
-        run: |
-          xcodebuild test \
             -workspace $WORKSPACE \
             -scheme $SCHEME \
             -sdk iphonesimulator \
