--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,9 +13,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install Xcode
-        uses: actions/setup-xcode@v2
+        uses: github/actions/setup-xcode@v2
         with:
-          xcode-version: '13.2.1'
+          version: '13.2.1'
       - name: Install Dependencies
         run: |
           if [ -e Podfile ]; then
